//
// This source file is part of the CS342 2023 Utah Team Application project
//
// SPDX-FileCopyrightText: 2023 Stanford University
//
// SPDX-License-Identifier: MIT
//

// MARK: - Schedule
"QUESTIONNAIRE_LIST_TITLE" = "Tasks";
"QUESTIONNAIRE_TITLE" = "Monthly Questionnaire";
"QUESTIONNAIRE_DESCRIPTION" = "Please fill out this Questionnaire every month.";
"QUESTIONNAIRE_ACTION" = "Start Questionnaire";

"RESEARCHKIT_TASK_TITLE" = "Questionnaire";
"RESEARCHKIT_TASK_DESCRIPTION" = "Please complete this task once a month.";
"RESEARCHKIT_TASK_ACTION" = "Start Task";

"6MWT_TASK_TITLE" = "Six Minute Walk Test";
"6MWT_TASK_DESCRIPTION" = "Please complete this task once a month.";
"6MWT_TASK_ACTION" = "Start Task";

"QUESTIONNAIRE_TASK_TITLE" = "Assessment Bundle";
"EDMONTON_TITLE" = "Questionnaire";
"EDMONTON_VEINES_TITLE" = "Venous Questionnaire (VEINES)";
"EDMONTON_WIQ_TITLE" = "Arterial Questionnaire (WIQ)";


// MARK: - GetUpAndGo
"GET_UP_GO_TITLE" = "Get Up and Go";
"GET_UP_AND_GO_DESCRIPTION" = "I would like you to sit in this chair with your back and arms resting. Then, when you are ready, click the ‘Start’ button and please stand up and walk at a safe and comfortable pace approximately 3m away. Turn around and return to the chair and sit down. Then click the 'Finish' button.";
"GET_UP_AND_GO_WARNING" = "Do not do this alone. Please have someone by you to help you if necessary.";
"GET_UP_AND_GO_START_BUTTON" = "Start";



