...
                .init(
                    icon: Image(systemName: "chart.line.uptrend.xyaxis"),
                    title: "Monitor your progress".moduleLocalized,
                    description: "View your progression over time\n".moduleLocalized
                )
            ],
            actionText: "Next".moduleLocalized,
            action: {
                if !FeatureFlags.disableFirebase {
                    onboardingSteps.append(.accountSetup)
                } else {
                    #if targetEnvironment(simulator) && (arch(i386) || arch(x86_64))
                    print("PKCanvas view-related views are currently skipped on Intel-based iOS simulators due to a metal bug on the simulator.")
...
