...
// swiftlint:disable function_body_length line_length
enum VEINESTask {
    static func createVeinesTask(showSummary: Bool = true) -> ORKOrderedTask {
        var steps = [ORKStep]()

        let instruction = ORKInstructionStep(identifier: "VEINES")
        instruction.title = "VEINES-QOL/Sym Questionnaire"
        instruction.text = """
                    This information will help your doctors keep track of how you feel and how well you are able to do your usual activities. If you are unsure about how to answer a question, please give the best answer you can.

                    You will be asked to complete this questionnaire at regular intervals to track your progress over time. You will be able to view your progress in the trends tab.

                    """
...
        q8Step.isOptional = false
        steps += [q8Step]

        // SUMMARY
        if showSummary {
            let summaryStep = ORKCompletionStep(identifier: "SummaryStep")
            summaryStep.title = "Thank you."
            summaryStep.text = "You can view your progress in the trends tab."
            steps += [summaryStep]
        }

        return ORKOrderedTask(identifier: "veines", steps: steps)
    }
...
