...
            Spacer()
            Text("You can view your progress in the trends tab.")
                .padding(.vertical, 15)
            Button(action: {
                self.delegate.dismiss()
            }) {
                Text("Done")
                    .padding()
                    .frame(maxWidth: .infinity)
                    .background(Color.accentColor)
                    .foregroundColor(Color.white)
                    .cornerRadius(10)
            }
...
